# TGAReader

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
include/: Image.h  ImageDefs.h  TGAImage.h  Util.h
src/: TGADecode.c  TGAEncode.c  TGAImage.c  Util.c  image.c  test.c  tga.c
src/Decode/: TGADecode.c
src/Private/: TGAPrivate.h
